2006-09-21  Tania Bento  <tbento@redhat.com>

	* javax/swing/JTabbedPane.java:
	(insertTab): Notify ChangeListeners if the tab inserted is selected.
	(setModel): A ChangeListener should be created only if there does not 
	currently exist one.

2006-09-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
	(MaximizeAction.actionPerformed): Change icon on maxButton.

2006-09-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicScrollPaneUI.java
	(syncScrollPaneWithViewport): Fixed typo (hsb vs. vsb).
	Use more efficient getViewPosition() and getViewSize() methods
	to avoid creating a rectangle.
	(HSBChangeListener.stateChanged): Update the view position
	unconditionally. Let the Viewport figure out if something
	changed.
	(VSBChangeListener.stateChanged): Update the view position
	unconditionally. Let the Viewport figure out if something
	changed.
	* javax/swing/JViewport.java
	(ViewListener.componentResized): Fire state change, because
	the extentSize changes.
	(extentSize): Removed unneeded field.
	(viewSize): Removed unneeded field.
	(getExtentSize): Return the viewport's size here.
	(getViewRect): Reformatted.
	(getViewSize): Reordered for only one return statement.
	(paintImmediately2): Fixed up javadoc.
	(paint): Removed unneeded statement.
	(setExtentSize): Set viewport size and check for actual change
	of value.
	(setViewPosition): Simplified condition. Set scrollUnderway
	true and don't set isViewSizeSet. Avoid creating one Point
	object.
	(setViewSize): Fixed != comparison with equals(). Set scrollUnderway
	to false.
	* javax/swing/JScrollBar.java
	(ScrollBarListener): New class. Forwards change events from
	the model as adjustment events.
	(sbChangeListener): New field.
	(JScrollBar): Install listener on new model.
	(fireAdjustmentValueChanged(int,int,int)): Delegate to new helper
	method.
	(fireAdjustmentValueChanged(int,int,int,boolean)): New helper