@@ -402,11 +402,7 @@ public class DirectColorModel extends PackedColorModel
     /* TODO: provide better implementation based on the
        assumptions we can make due to the specific type of the
        color model. */
-    super.coerceData(raster, isAlphaPremultiplied);
-	
-    return new ComponentColorModel(cspace, bits, hasAlpha(),
-				   isAlphaPremultiplied, // argument
-				   transparency, transferType);
+    return super.coerceData(raster, isAlphaPremultiplied);
   } 
 
   public boolean isCompatibleRaster(Raster raster)
